<resources>
    <string name="app_name">Apka Damiana 30685</string>
    <string name="send"> Wyślij wiadomość </string>
    <string name="share"> Udostępnij </string>
    <string name="version"> Wersja SDK </string>
    <string name="about"> O programie </string>

    <string name="app_imie">Damian Kliber</string>
    <string name="app_album">Album: 30685</string>
    <string name="nav_16">Lab 6. Czas życia, sensory </string>
    <string name="nav_16_b">Lab 6. Uczelnia </string>
    <string name="nav_17">Lab 7. Widoki, układy </string>
    <string name="nav_18">Lab 8. RecyclerView </string>
    <string name="nav_19">Lab 9. Fragmenty </string>
    <string name="nav_110">Lab 10. Baza danych </string>
    <string name="nav_111">Lab 11. Usługi </string>
    <string name="nav_112">Lab 12. Różności </string>
    <string name="nav_projekt"> Projekt indywidualny </string>
    <string name="nav_projekt_temat"> Temat </string>
    <string name="nav_projekt_ikona"> Ikona </string>
    <string name="nav_open_drawer"> Otwórz szufladę </string>
    <string name="nav_close_drawer"> Zamknij szufladę </string>
    <string name="sensors"> Czujniki </string>

    <string name="departaments"> Kierunki </string>
    <string name="wyswietl_kierunki" translatable="false">Wyświetl kierunki</string>
    <string name="kierunki" translatable="false">kierunki</string>
    <string-array name="wydzialy">
        <item>Politechniczny</item>
        <item>Lekarski</item>
        <item>Nauk o zdrowiu</item>
        <item>Nauk Społecznych</item>
    </string-array>

    <string name="configuration"> Konfiguracja </string>
    <string name="write_nick"> Wpisz nick </string>
    <string name="wybierz_kierunek"> Podaj kierunek </string>
    <string name="wpisz_email"> Wpisz email </string>
    <string name="wlacz"> ON </string>
    <string name="akademik"> Informacje z akademika </string>
    <string name="uczelnia"> Informacje uczelniane </string>
    <string name="button"> Akceptuj dane </string>
    <string name="button_sms"> SMSManager </string>
    <string name="button_sms_default"> SMS (Default) </string>
    <string name="mezczyzna"> Mężczyzna </string>
    <string name="kobieta"> Kobieta </string>

    <string name="obiekty_uczelni"> Obiekty uczelni </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="obiekty_info"> Obiekty Info </string>
    <string name="obiekty_lista"> Obiekty Lista </string>
    <string name="title_activity_baza_danych">BazaDanych</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="aktualizuj_dane"> Aktualizuj dane</string>
    <string name="kasuj_rekord"> Kasuj rekord </string>
    <string name="nowa_pozycja"> Zapisz nową pozycję </string>

    <string name="wpisz_organizacje">wpisz organizację</string>
    <string name="rodzaj_organizacji">podaj rodzaj organizacji</string>

    <string name="BazaDanychDopisz">Baza Danych Dopisz</string>
    <string name="BazaDanychAktualizacja">Baza Danych Aktualizacja</string>

    <string name="sprawdzaj_siec">Sprawdzaj siec</string>
    <string name="start_serwis">Start usługi</string>
    <string name="stop_serwis">Stop usługi</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

</resources>