<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <item
        android:id="@+id/send"
        android:icon="@drawable/ic_action_send"
        android:title="@string/send"
        app:showAsAction="never"
    />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
        app:showAsAction="ifRoom"
    />

    <item
        android:id="@+id/version"
        android:title="@string/version"
        app:showAsAction="never"
    />

    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"
    />

</menu>