<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/nick"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/write_nick"
                android:text=""
            />

            <Spinner
                android:id="@+id/wydzial"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/wydzialy"
            />

            <AutoCompleteTextView
                android:id="@+id/kierunek"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/wybierz_kierunek"
                android:text=""
            />

            <DatePicker
                android:id="@+id/data"
                android:layout_width="match_parent"
                android:layout_height="524dp"
            />

            <RadioGroup
                android:id="@+id/plec"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
            >
                <RadioButton
                    android:id="@+id/mezyczna"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/mezczyzna"
                />

                <RadioButton
                    android:id="@+id/kobieta"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/kobieta"
                />
            </RadioGroup>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/wpisz_email"
                android:text=""
            />

            <ToggleButton
                android:id="@+id/wlacz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wlacz"
            />

            <CheckBox
                android:id="@+id/info_akademik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/akademik"
            />

            <CheckBox
                android:id="@+id/info_uczelnia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uczelnia"
            />

            <Button
                android:id="@+id/buttom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="wyslijDane"
                android:text="@string/button"
            />

            <Button
                android:id="@+id/buttom_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="wyslijDaneSMS"
                android:text="@string/button_sms_default"
            />

            <Button
                android:id="@+id/buttom_sms_manager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="wyslijDaneSMSManager"
                android:text="@string/button_sms"
            />

        </LinearLayout>

    </ScrollView>

</LinearLayout>